--- a/www.win2.my/try.html
+++ b/www.win2.my/try.html
@@ -45,12 +45,12 @@
 
             //alert(el.dataset.l);
             //var interval=1000;
-            if(el.dataset.l==1){
+            /*if(el.dataset.l==1){
                 //interval=7000;
                 errDownload(mDiv);
 
 
-            }
+            }*/
 
             //setTimeout(getDownload,interval,el.dataset.l);
 
