Smoke Start 0.6.8 landing 1.0 Optstore

--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="/default.css">
     <link rel="stylesheet" href="/lp.css">
+    <link rel="stylesheet" href="/dexter_menu_lite.css">
 
 
 
@@ -30,18 +31,24 @@
     <div class="maxw rel">
         <nav>
             <div class="dexter_menu">
+                <!--<div class="wrapper"></div>-->
+                    <input type="checkbox" id="dexter_menu_check">
+                    <label for="dexter_menu_check"></label>
+                    <div class="dexter-main-menu-top">
+                        <span class="dexter_menu_label">MENU</span>
+                    </div>
 
-
-                <input type="checkbox" id="dexter_menu_btn" class="toggleMenu">
-                <label for="dexter_menu_btn" class="toggleMenu"><span></span><span class="dexter_menu_span_c"></span><span></span></label>
-                <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                </ul>
-
-
-
+                    <div class="dexter-line first"></div>
+                    <div class="dexter-line second"></div>
+                    <div class="dexter-line third"></div>
+                    <div class="dexter-line fourth"></div>
+                    <nav class="dexter-main-menu">
+                        <a href="">Пункт 1</a>
+                        <a href="#">Пункт 2</a>
+                        <a href="#">Пункт 3</a>
+                        <a href="#">Пункт 4</a>
+                        <a href="#">Пункт 5</a>
+                    </nav>
 
             </div>
         </nav>
