--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="/default.css">
     <link rel="stylesheet" href="/lp.css">
+    <!--<link rel="stylesheet" href="/frame.css">-->
     <link rel="stylesheet" href="/dexter_menu_lite.css">
 
 
@@ -29,29 +30,38 @@
 
 
     <div class="maxw rel">
+
+
+        <div id="logo"><a href="/" title="Mobile Smoke - в Украине"><img src="/img/site/dbpic.php?i=logo&ep=1" alt="Mobile Smoke"></a></div>
+
         <nav>
             <div class="dexter_menu">
-                <!--<div class="wrapper"></div>-->
-                    <input type="checkbox" id="dexter_menu_check">
-                    <label for="dexter_menu_check"></label>
-                    <div class="dexter-main-menu-top">
-                        <span class="dexter_menu_label">MENU</span>
-                    </div>
+                <input type="checkbox" id="dexter_menu_check">
+                <label for="dexter_menu_check"></label>
+                <div class="dexter-main-menu-top">
+                    <span class="dexter_menu_label">MENU</span>
+                </div>
 
-                    <div class="dexter-line first"></div>
-                    <div class="dexter-line second"></div>
-                    <div class="dexter-line third"></div>
-                    <div class="dexter-line fourth"></div>
-                    <nav class="dexter-main-menu">
-                        <a href="">Пункт 1</a>
-                        <a href="#">Пункт 2</a>
-                        <a href="#">Пункт 3</a>
-                        <a href="#">Пункт 4</a>
-                        <a href="#">Пункт 5</a>
-                    </nav>
+                <div class="dexter-line first"></div>
+                <div class="dexter-line second"></div>
+                <div class="dexter-line third"></div>
+                <div class="dexter-line fourth"></div>
+                <nav class="dexter-main-menu">
+                    <a href="">Пункт 1</a>
+                    <a href="#">Пункт 2</a>
+                    <a href="#">Пункт 3</a>
+                    <a href="#">Пункт 4</a>
+                    <a href="#">Пункт 5</a>
+                    <a href="#">Пункт 6</a>
+                </nav>
+
 
             </div>
         </nav>
+        <div class="cl"></div>
+        1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11
+
+        пошло остальное
     </div>
 
     </div>
