Smoke Start 0.6.8 landing 1.0 Optstore

--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -59,6 +59,23 @@
             </div>
         </nav>
         <div class="cl"></div>
+
+        <div class="rel top_content">
+            <h3 class="wow pulse">MobileSmoke - мобильные кальяны в Украине</h3>
+            <div>
+                <img src="/img/fast_order/hookah_fon.png" alt="MobileSmoke" class="fl wow bounceInLeft">
+            </div>
+            <div>
+                <br><br><br><p class="wow bounceInRight">Оставьте заявку и мы с Вами свяжемся в ближайшее время, чтобы обсудить детали заказа в телефонном режиме. Или Вы можете продолжить покупки и оформить товар из корзины.</p>
+
+                <span id="top_call_back_btn" class="ac wow bounceInUp">ede</span>
+            </div>
+<div class="cl"></div>
+        </div>
+
+        <div class="cl"></div>
+
+
         1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11
 
         пошло остальное
