Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -62,26 +62,22 @@
 
         <div class="rel top_content">
             <h3 class="wow pulse">MobileSmoke - мобильные кальяны в Украине</h3>
-            <div>
-                <img src="/img/fast_order/hookah_fon.png" alt="MobileSmoke" class="fl wow bounceInLeft">
+            <div id="d_fon_top_img">
+                <img src="/img/fast_order/hookah_fon.png" alt="MobileSmoke" class="wow bounceInLeft">
+                <div class="cl"></div>
             </div>
-            <div>
+            <div id="d_fon_top_r" class="fr">
                 <br><br><br><p class="wow bounceInRight">Оставьте заявку и мы с Вами свяжемся в ближайшее время, чтобы обсудить детали заказа в телефонном режиме. Или Вы можете продолжить покупки и оформить товар из корзины.</p>
 
-                <span id="top_call_back_btn" class="ac wow bounceInUp">ede</span>
+                <div id="top_call_back_btn" class="ac wow bounceInUp">Перезвонить мне</div>
             </div>
-<div class="cl"></div>
+            <div class="cl"></div>
         </div>
 
         <div class="cl"></div>
-
-
-        1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11
-
-        пошло остальное
     </div>
 
-    </div>
+    </div><div class="cl"></div>
 </div>
 
 
