--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -10,12 +10,17 @@
 
     <link rel="stylesheet" href="/default.css">
     <link rel="stylesheet" href="/lp.css">
-    <!--<link rel="stylesheet" href="/frame.css">-->
+
     <link rel="stylesheet" href="/dexter_menu_lite.css">
 
-
-
     <link rel="stylesheet" href="/css/wow.css">
+
+
+
+
+    <link rel="stylesheet" href="/lp2.css">
+    <link rel="stylesheet" href="/lp3.css">
+
     <script src="/js/wow.min.js"></script>
     <script>
         new WOW().init();
@@ -24,7 +29,7 @@
 </head>
 <body>
 
-
+<!--первая часть-->
 <div class="min_h first_d rel">
     <div class="rel">
 
@@ -80,9 +85,83 @@
     </div><div class="cl"></div>
 </div>
 
+<!--вторая часть-->
+<div class="min_h fon rel">
+    <div class="land_fon_c rel">
+        <div class="maxw rel">
+            <section><link rel="stylesheet" href="/css/fotorama.php">
+                <div class="land_fon_c_l rel">
+                    <div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="7000" data-keyboard="true" >
+                        <img src="/img/fast_order/dbpic.php?i=black" alt="MobileSmoke - чёрный">
+                        <img src="/img/fast_order/dbpic.php?i=black_box" alt="MobileSmoke - чёрный в коробке">
+                        <img src="/img/fast_order/dbpic.php?i=black_kind" alt="MobileSmoke">
+                        <img src="/img/fast_order/dbpic.php?i=white" alt="MobileSmoke - белый">
+                        <img src="/img/fast_order/dbpic.php?i=white_box" alt="MobileSmoke - белый в коробке">
+                        <img src="/img/fast_order/dbpic.php?i=box" alt="MobileSmoke в коробке">
+                        <img src="/img/fast_order/dbpic.php?i=fon" alt="MobileSmoke">
+                        <img src="/img/fast_order/dbpic.php?i=red" alt="MobileSmoke - красный">
+                        <img src="/img/fast_order/dbpic.php?i=green" alt="MobileSmoke - зелёный">
+                        <img src="/img/fast_order/dbpic.php?i=blue" alt="MobileSmoke - синий">
+                    </div>
+                </div>
+                <div class="land_fon_c_r rel">
+                    <h3 class="wow pulse">MobileSmoke</h3>
+                    <div class="rel"></div>
+                    <div class="land_price wow bounceInRight">699 грн  <span class="land_price_old">800 грн</span></div>
+                    <div>
 
-<div class="min_h fon">2</div>
-<div class="min_h fon2">3</div>
+                        <div class="land_btn_buy ac wow bounceInUp">Заказать</div>
+                        <p class="wow bounceInRight">Наши покупатели успели по достоинству оценить высокое качество и удобство горизонтальных kaльянов MobileSmoke. Невероятно густой и ароматный дым, легкая тяга, оригинальный дизайн, прочность и мобильность - лишь основные преимущества kaльянов MobileSmoke. Вы и Ваши друзья останетесь довольны кальяном MobileSmoke вне зависимости от того, где Вы намерены его использовать.</p>
+                        <ul class="item wow bounceInLeft"><li><span class="check"></span>Плоский корпус MobileSmoke;</li><li><span class="check"></span>Силиконовая чаша;</li><li><span class="check"></span>Шланг и мундштук MobileSmoke;</li><li><span class="check"></span>Устройство контроля нагрева табака (Kaloud Lotus);</li><li><span class="check"></span>Подсветка с пультом дистанционного управления;</li><li><span class="check"></span>Металлические щипцы.</li></ul>
+                        <div class="cl"></div>
+                    </div>
+                </div>
+            </section>
+        </div><div class="cl"></div>
+    </div><div class="cl"></div>
+</div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
+
+
+<!--третья часть-->
+<div class="min_h fon2">
+
+    <div class="maxw land_benefits">
+        <section>
+            <div class="ac land_benefits_caption">
+                <h3>Наши преимущества</h3>
+                <p>В нашей компании вы получаете не только 100% качественный товар, но и индивидуальный подход к каждому клиенту!</p>
+            </div>
+            <div class="land_benefits_border cl"><br></div>
+            <div class="dwfte">
+                <div class="land_benefits_box five wow rollIn">
+                    <span class="land_pay_i fl"></span>
+                    <span><h4>Способы оплаты</h4><p>При получении на почте или на карту ПриватБанка</p></span>
+                    <div class="cl"></div>
+                </div>
+                <div class="land_benefits_box five wow lightSpeedIn">
+                    <span class="land_quality_i fl"></span>
+                    <span><h4>Гарантия качества</h4><p>Возврат и обмен в течении 14 дней согласно закона</p></span>
+                    <div class="cl"></div>
+                </div>
+            </div>
+            <div class="land_benefits_border cl"></div>
+            <div class="dwfte">
+                <div class="land_benefits_box five wow rollIn">
+                    <span class="land_delivery_i fl"></span>
+                    <span><h4>Быстрая доставка</h4><p>Получите свой заказ в течении 1-2 дней с момента заказа</p></span>
+                    <div class="cl"></div>
+                </div>
+                <div class="land_benefits_box five wow lightSpeedIn">
+                    <span class="land_price_i fl"></span>
+                    <span><h4>Доступные цены</h4><p>Вы можете приобрести кальян MobileSmoke всего за 720 грн</p></span>
+                    <div class="cl"></div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="cl five five_"></div>
+
+</div>
 <div class="min_h fon">4</div>
 <div class="min_h fon2">5</div>
 
