--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -162,11 +162,12 @@
     <div class="cl five five_"></div>
 
 </div>
-<div class="min_h fon">4</div>
-<div class="min_h fon2">5</div>
 
-<div class="wow fadeInRight">df</div>
-<div class="wow fadeInLeft">df5654 656 546 5456</div>
+
+
+<div id="pulseBtn" class="pulse_btn"><div><div class="pulse_btn_phone"><i class="fa fa-phone" aria-hidden="true"></i><span class="grey">Тел</span></div><div class="pulse_btn_text">Кнопка связи</div></div></div>
+
+
 
 </body>
 </html>
