--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="/lp2.css">
     <link rel="stylesheet" href="/lp3.css">
 
+
+    <link rel="stylesheet" href="/css/lp_wow/lp_wow.php">
+
     <script src="/js/wow.min.js"></script>
     <script>
         new WOW().init();
@@ -168,6 +171,6 @@
 <div id="pulseBtn" class="pulse_btn"><div><div class="pulse_btn_phone"><i class="fa fa-phone" aria-hidden="true"></i><span class="grey">Тел</span></div><div class="pulse_btn_text">Кнопка связи</div></div></div>
 
 
-
+<link href="/css/fotorama.php" rel="stylesheet">
 </body>
 </html>
