--- a/www.smoke.my/wow.html
+++ b/www.smoke.my/wow.html
@@ -1,48 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="copyright" lang="ru" content="MobileSmoke"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="robots" content="index,follow">
-
-    <meta property="og:image" content="/img/fast_order/meta.jpg"><meta property="og:title" content="MobileSmoke - горизонтальный MobileSmoke"><meta property="og:description" content="Неповторимый густой и ароматный дым в сочетании с лёгкой тягой, сделают Ваш вечер оригинальным.">
-
-    <script async src="/js/common.php"></script><script async src="/js/call_back.php"></script>
-
-
-    <link rel="stylesheet" href="/default.css">
-    <link rel="stylesheet" href="/lp.css">
-
-    <link rel="stylesheet" href="/dexter_menu_lite.css">
-
-    <link rel="stylesheet" href="/css/wow.css">
-
-    <link rel="stylesheet" href="/lp2.css">
-    <link rel="stylesheet" href="/lp3.css">
-
-
-    <link rel="stylesheet" href="/css/lp_wow/lp_wow.php">
-
-    <script src="/js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
-
-    <title>MobileSmoke - горизонтальный MobileSmoke</title>
-    <meta name="description" content="Большое количество наших клиентов смогли по достоинству оценить высокое качество и удобство горизонтальных MobileSmoke. Неповторимый густой и ароматный дым в сочетании с лёгкой тягой, сделают Ваш вечер оригинальным.">
-
-</head>
-<body>
-
-<!--первая часть-->
+<!DOCTYPE html><html lang="ru"><head><link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="robots" content="index,follow">
+<meta property="og:image" content="/img/fast_order/meta.jpg"><meta property="og:title" content="MobileSmoke - горизонтальный MobileSmoke"><meta property="og:description" content="Неповторимый густой и ароматный дым в сочетании с лёгкой тягой, сделают Ваш вечер оригинальным."><script async src="/js/common.php"></script><script async src="/js/call_back.php"></script><link rel="stylesheet" href="/css/lp_wow/body.php"><script src="/js/wow.min.js"></script><script>new WOW().init();</script><title>MobileSmoke - горизонтальный MobileSmoke</title><meta name="description" content="Большое количество наших клиентов смогли по достоинству оценить высокое качество и удобство горизонтальных MobileSmoke. Неповторимый густой и ароматный дым в сочетании с лёгкой тягой, сделают Ваш вечер оригинальным.">
+</head><body>
 <div class="min_h first_d rel">
     <div class="rel">
-
-
     <div class="maxw rel">
-
-
         <div id="logo"><a href="/" title="Mobile Smoke - в Украине"><img src="/img/site/dbpic.php?i=logo&ep=1" alt="Mobile Smoke"></a></div>
-
         <nav>
             <div class="dexter_menu">
                 <input type="checkbox" id="dexter_menu_check">
@@ -50,23 +12,15 @@
                 <div class="dexter-main-menu-top">
                     <span class="dexter_menu_label">MENU</span>
                 </div>
-
-                <div class="dexter-line first"></div>
-                <div class="dexter-line second"></div>
-                <div class="dexter-line third"></div>
-                <div class="dexter-line fourth"></div>
+                <div class="dexter-line first"></div><div class="dexter-line second"></div><div class="dexter-line third"></div><div class="dexter-line fourth"></div>
                 <nav class="dexter-main-menu">
                     <a href="/">Главная</a>
                     <a href="#zakazat">Заказать</a>
                     <a href="#preimushestva">Преимущества</a>
-
                 </nav>
-
-
             </div>
         </nav>
         <div class="cl"></div>
-
         <div class="rel top_content">
             <h3 class="wow pulse">MobileSmoke - мобильные кальяны в Украине</h3>
             <div id="d_fon_top_img">
@@ -75,17 +29,12 @@
             </div>
             <div id="d_fon_top_r" class="fr">
                 <br><br><br><p class="wow bounceInRight">Оставьте заявку и мы с Вами свяжемся в ближайшее время, чтобы обсудить детали заказа в телефонном режиме. Или Вы можете продолжить покупки и оформить товар из корзины.</p>
-
                 <div id="top_call_back_btn" class="ac wow bounceInUp">Перезвонить мне</div>
                 <script>document.getElementById("top_call_back_btn").addEventListener("click",function(){
                     formCalBackViewl();},false);</script>
-            </div>
-            <div class="cl"></div>
-        </div>
-
-        <div class="cl"></div>
+            </div><div class="cl"></div>
+        </div><div class="cl"></div>
     </div>
-
     </div><div class="cl"></div>
 </div>
 
@@ -131,11 +80,8 @@
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
-
-
 <!--третья часть-->
 <div id="preimushestva" class="min_h fon2">
-
     <div class="maxw land_benefits">
         <section>
             <div class="ac land_benefits_caption">
@@ -172,5 +118,4 @@
     </div>
     <div class="cl five five_"></div>
 </div>
-<div id="pulseBtn" class="pulse_btn"><div><div class="pulse_btn_phone"><i class="fa fa-phone" aria-hidden="true"></i><span class="grey"></span></div><div class="pulse_btn_text">Кнопка связи</div></div></div>
-<link href="/css/fotorama.php" rel="stylesheet"></body></html>
+<div id="pulseBtn" class="pulse_btn"><div><div class="pulse_btn_phone"><i class="fa fa-phone" aria-hidden="true"></i><span class="grey"></span></div><div class="pulse_btn_text">Кнопка связи</div></div></div><link rel="stylesheet" href="/css/lp_wow/pulse_btn.php"><link href="/css/fotorama.php" rel="stylesheet"></body></html>
