Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -63,7 +63,7 @@
             <div class="rel top_content">
                 <h3 class="wow pulse">Humidifier - ультразвуковой увлажнитель воздуха</h3>
                 <div id="d_fon_top_img">
-                    <img src="/img/fast_order/hookah_fon.png" alt="MobileSmoke" class="wow bounceInLeft">
+                    <img src="/img/fast_order/humidifier_fon.png" alt="Humidifier - ультразвуковой увлажнитель воздуха" class="wow bounceInLeft">
                     <div class="cl"></div>
                 </div>
                 <div id="d_fon_top_r" class="fr">
