--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -53,9 +53,8 @@
                         <a href="/">Главная</a>
                         <a href="#zakazat">Заказать</a>
                         <a href="#preimushestva">Преимущества</a>
-                        <a href="#">Преимущества</a>
-                        <a href="#">Преимущества</a>
-                        <a href="#">Преимущества</a>
+                        <a href="#to-use">Инструкция</a>
+                        <a href="#primenenie">Применение</a>
                     </nav>
                 </div>
             </nav>
@@ -85,22 +84,25 @@
             <section>
                 <div class="land_fon_c_l rel">
                     <div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="7000" data-keyboard="true" >
-                        <img src="/img/fast_order/dbpic.php?i=black" alt="MobileSmoke - чёрный">
-                        <img src="/img/fast_order/dbpic.php?i=black_box" alt="MobileSmoke - чёрный в коробке">
-                        <img src="/img/fast_order/dbpic.php?i=black_kind" alt="MobileSmoke">
-                        <img src="/img/fast_order/dbpic.php?i=white" alt="MobileSmoke - белый">
-                        <img src="/img/fast_order/dbpic.php?i=white_box" alt="MobileSmoke - белый в коробке">
-                        <img src="/img/fast_order/dbpic.php?i=box" alt="MobileSmoke в коробке">
-                        <img src="/img/fast_order/dbpic.php?i=fon" alt="MobileSmoke">
-                        <img src="/img/fast_order/dbpic.php?i=red" alt="MobileSmoke - красный">
-                        <img src="/img/fast_order/dbpic.php?i=green" alt="MobileSmoke - зелёный">
-                        <img src="/img/fast_order/dbpic.php?i=blue" alt="MobileSmoke - синий">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-main" alt="Humidifier - презентация">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-avto" alt="Humidifier - авто">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-fon" alt="Humidifier - фон">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-blue" alt="Humidifier - голубой">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-pink" alt="Humidifier - розовый">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-white" alt="Humidifier - белый">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-home" alt="Humidifier - дом">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-office" alt="Humidifier - офис">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-packaging" alt="Humidifier - офис">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-packaging" alt="Humidifier - офис">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-details" alt="Humidifier - деталировка">
+                        <img src="/img/humidifier/dbpic.php?i=humidifier-econom" alt="Humidifier - эконом">
                     </div>
                 </div>
                 <div class="land_fon_c_r rel">
                     <h3 class="wow pulse">Humidifier - ультразвуковой увлажнитель воздуха</h3>
                     <div class="rel"></div>
-                    <div class="land_price wow bounceInRight">699 грн  <span class="land_price_old">800 грн</span></div>
+                    <div class="land_price wow bounceInRight">416 грн  <span class="land_price_old">629 грн</span></div>
                     <div>
                         <div id="land_btn_buy" class="land_btn_buy ac wow bounceInUp">Заказать</div>
                         <script>
@@ -111,7 +113,6 @@
                         <p class="wow bounceInRight">Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.</p>
                         <h4>Технические характеристики</h4>
                         <ul class="item wow bounceInLeft">
-
                             <li><span class="check"></span>Обьем резервуара: 300мл;</li>
                             <li><span class="check"></span>Скорость испарения жидкости: 30 мл.час;</li>
                             <li><span class="check"></span>Мощность: 1.5-2Вт;</li>
@@ -163,7 +164,7 @@
                 </div>
                 <div class="land_benefits_box five wow lightSpeedIn">
                     <span class="land_price_i fl"></span>
-                    <span><h4>Доступные цены</h4><p>Вы можете приобрести кальян MobileSmoke всего за 699 грн</p></span>
+                    <span><h4>Доступные цены</h4><p>Вы можете приобрести кальян MobileSmoke всего за 416 грн</p></span>
                     <div class="cl"></div>
                 </div>
             </div>
@@ -176,11 +177,25 @@
 
 
 <!--четвёртая часть-->
-<div class="min_h fon rel">
+<div id="to-use" class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
-            <h3>Особенности</h3>
-            реапреапр
+            <h3 class="ac">Простота использования</h3><br>
+
+            <ul class="item wow bounceInLeft">
+
+                <li><span class="check"></span>Перед тем как применять устройство, налить в резервуар чистой воды.</li>
+                <li><span class="check"></span>Подключить увлажнитель к прикуривателю.
+                <li><span class="check"></span>Если растворить в воде пару капель ароматического масла, то в добавок к увлажнению происходит освежение салона. Важно использовать только растворимые в воде масла.</li>
+                <li><span class="check"></span>Струи пара регулируются и направляются в нужную сторону.</li>
+                <li><span class="check"></span>Устройство стоит применять только в заведенном автомобиле.</li>
+                <li><span class="check"></span>Вода должна быть очищенной. Важно следить за тем, чтобы она не заканчивалась.</li>
+                <li><span class="check"></span>При соблюдении этих условий, увлажнитель воздуха повысит качество поездки и приятно освежит воздух в салоне.</li>
+
+            </ul>
+            <br>
+            <p class="wow bounceInUp">Если вы хотите, чтобы вас всегда сопровождал приятный аромат- то увлажнитель Humidifier для Вас!</p>
+
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
@@ -188,10 +203,35 @@
 
 
 <!--пятая часть-->
-<div class="min_h fon2">
+<div id="primenenie" class="min_h fon2">
     <div class="maxw">
+        <h3 class="ac">Оптимальное решение для ВАС</h3><br>
 
-        дл
+
+
+        <p class="wow bounceInLeft">Сухой воздух – довольно частая проблема для замкнутых помещений, будь то комната или салон автомобиля. Мало того, что им просто неприятно дышать, так он еще и неблаготворно сказывается на вашем здоровье, является причиной целого ряда заболеваний.</p>
+        <p class=" wow bounceInRight">С этим небольшим и недорогим устройством ваши поездки станут намного комфортнее!</p>
+        <ul class="item wow bounceInLeft">
+            <li><span class="check"></span>Сохраняет увлажненность воздуха в салоне автомобиля</li>
+            <li><span class="check"></span>Применяется как аромалампа</li>
+            <li><span class="check"></span>В режиме освежителя снимает психологическое напряжение</li>
+            <li><span class="check"></span>Маленький размер и компактность обеспечивают удобство хранения</li>
+        </ul>
+
+
+
+        <p>Разнообразие применений:</p>
+        - Как дома, так и находясь на работе в офисе, торговом центре, автомобиле, где всегда сухой воздух и нашей коже и легким не хватает увлажнения.
+        - В машине он будет увлажнять воздух в салоне автомобиля а, при добавлении эфирных масел, может использоваться для ароматерапии. Главный плюс такой ароматизации, то что она натуральна и полезна для нашего организма.
+        - Можно использовать в отопительный период во время сна, в качестве персонального увлажнителя.
+        - В вечернее и ночное время может служить ночником благодаря приятной подсветке.
+        - В период болезни детей, им нужен влажный и чистый воздух - увлажнитель вам поможет в этом - поставьте увлажнитель на тумбочку возле кроватки ребёнка или в изголовье.
+
+        Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.
+
+
+
+
     </div>
     <div class="cl five five_"></div>
 </div>
@@ -204,7 +244,7 @@
     <div class="land_fon_c rel">
         <div class="maxw rel">
             <div id="land-fast-order" class="five"></div>
-            <section><h2 class="ac">Сделать заказать по акции:</h2>
+            <section><h2 class="ac wow bounceInDown">Сделать заказать по акции:</h2>
                 <form id="land_form_fast_buy" class="land_form_fast_buy">
                     <div class="rel">
                         <input id="formFastFIOLand" name="username" type="text" size="33" title="Введите Ваше имя" placeholder="Фамилия и Имя *" required="">
@@ -226,7 +266,7 @@
                             <option value="turquoise">Бирюзовый</option>
                         </select>
                     </div>
-                    <div class="rel"><input id="formFastBuySubmitLand" type="submit" value="Заказать"></div>
+                    <div class="rel"><input id="formFastBuySubmitLand" class="wow bounceInUp" type="submit" value="Заказать"></div>
                 </form>
             </section>
             </div><div class="cl"></div>
