Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>humidifier</title>
+    <title>Humidifier - ультразвуковой увлажнитель воздуха</title>
     <link rel="stylesheet" href="/css/lp_humidifier/default.css">
     <link rel="stylesheet" href="/css/lp_humidifier/dexter_menu_lite.css">
     <link rel="stylesheet" href="/css/lp_humidifier/wow.css">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/lp_humidifier/form.css">
     <link rel="stylesheet" href="/css/lp_humidifier/lp6.css">
 
-    <link rel="stylesheet" href="/css/lp_humidifier/pulse_btn_.css">
+    <!--<link rel="stylesheet" href="/css/lp_humidifier/pulse_btn_.css">-->
 
     <script async src="/js/common.php"></script><script async src="/js/call_back.php"></script><link rel="stylesheet" href="/css/lp_wow/body.php"><script src="/js/wow.php"></script><script>new WOW().init();</script>
 
@@ -40,7 +40,7 @@
 <div class="min_h first_d rel">
     <div class="rel">
         <div class="maxw rel">
-            <div id="logo"><a href="/" title="Mobile Smoke - в Украине"><img src="/img/site/dbpic.php?i=logo&ep=1" alt="Mobile Smoke"></a></div>
+            <div id="logo"><a href="/" title="SOpt Store - в Украине"><img src="/img/site/dbpic.php?i=logo&ep=1" alt="SOpt Store"></a></div>
             <nav>
                 <div class="dexter_menu">
                     <input type="checkbox" id="dexter_menu_check">
@@ -111,6 +111,7 @@
                             },false);
                         </script>
                         <p class="wow bounceInRight">Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.</p>
+                        <p>Увлажнитель Humidifier абсолютно безшумный, кабель USB позволяет подключить его в любом удобном для вас месте, а благодаря оригинальной LED подсветке (7 цветов), его можно использовать в комнате как ночник.</p>
                         <h4>Технические характеристики</h4>
                         <ul class="item wow bounceInLeft">
                             <li><span class="check"></span>Обьем резервуара: 300мл;</li>
@@ -220,17 +221,7 @@
 
 
 
-        <p>Разнообразие применений:</p>
-        - Как дома, так и находясь на работе в офисе, торговом центре, автомобиле, где всегда сухой воздух и нашей коже и легким не хватает увлажнения.
-        - В машине он будет увлажнять воздух в салоне автомобиля а, при добавлении эфирных масел, может использоваться для ароматерапии. Главный плюс такой ароматизации, то что она натуральна и полезна для нашего организма.
-        - Можно использовать в отопительный период во время сна, в качестве персонального увлажнителя.
-        - В вечернее и ночное время может служить ночником благодаря приятной подсветке.
-        - В период болезни детей, им нужен влажный и чистый воздух - увлажнитель вам поможет в этом - поставьте увлажнитель на тумбочку возле кроватки ребёнка или в изголовье.
-
-        Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.
-
-
-
+        <p>Ультразвуковой увлажнитель Humidifier - просто необходим в каждом доме, особенно если в нём есть ребенок, он поможет создать оптимальный микроклимат и обеспечит необходимую влажность в помещении (особенно в отопительный сезон), благодаря чему улучшается сон малыша и взрослых, легко и быстро освежает, увлажняет кожу, создаёт микроклимат в вашем доме, автомобиле или в офисе. Благодаря своим компактным размерам, вы можете брать его с собой на работу, использовать в автомобиле при дальних поездках, как всем известно, духота в автомобиле ведет к потере внимания и апатичности, ведь недостатки систем вентиляции современных автомобилей в том, что они нарушают электрический баланс свежего воздуха, которым они снабжают салон, увлажнитель Humidifier с лёгкостью решит эту проблему.</p>
 
     </div>
     <div class="cl five five_"></div>
@@ -261,9 +252,9 @@
                     <div class="rel">
                         <select id="formFastColorLand" class="rel" onchange="this.style.color='black'">
                             <option value="">Выбрать цвет</option>
-                            <option value="white">Белый</option>
-                            <option value="pink">Розовый</option>
-                            <option value="turquoise">Бирюзовый</option>
+                            <option value="white-Humidifier">Белый</option>
+                            <option value="pink-Humidifier">Розовый</option>
+                            <option value="turquoise-Humidifier">Бирюзовый</option>
                         </select>
                     </div>
                     <div class="rel"><input id="formFastBuySubmitLand" class="wow bounceInUp" type="submit" value="Заказать"></div>
