Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -2,7 +2,7 @@
 <meta property="og:image" content="/img/humidifier/humidifier-packaging.jpg"><meta property="og:title" content="Humidifier - ультразвуковой увлажнитель воздуха"><meta property="og:description" content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом."><title>Humidifier - ультразвуковой увлажнитель воздуха</title><meta name="description" content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
 <script async src="/js/common.php"></script><script async src="/js/call_back.php"></script>
 <link rel="stylesheet" href="/css/lp_humidifier/body.php"><script src="/js/wow.php"></script><script>new WOW().init();</script>
-<script async src="/js/scroll_only.php"></script><script async src="../js/smoke/lp_humidifier.php"></script></head><body>
+<script async src="/js/scroll_only.php"></script><script async src="/js/lp_humidifier.php"></script></head><body>
 <div class="min_h first_d rel">
     <div class="rel">
         <div class="maxw rel">
