--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -1,8 +1,41 @@
-<!DOCTYPE html><html lang="ru"><head><link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="robots" content="index,follow">
-<meta property="og:image" content="/img/humidifier/humidifier-packaging.jpg"><meta property="og:title" content="Humidifier - ультразвуковой увлажнитель воздуха"><meta property="og:description" content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом."><title>Humidifier - ультразвуковой увлажнитель воздуха</title><meta name="description" content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
-<script async src="/js/common.php"></script><script async src="/js/call_back.php"></script>
-<link rel="stylesheet" href="/css/lp_humidifier/body.php"><script src="/js/wow.php"></script><script>new WOW().init();</script>
-<script async src="/js/scroll_only.php"></script><script async src="/js/lp_humidifier.php"></script></head><body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow">
+
+    <meta property="og:image" content="/img/humidifier/meta.jpg">
+    <meta property="og:title" content="Humidifier - ультразвуковой увлажнитель воздуха">
+    <meta property="og:description" content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
+
+
+    <title>Humidifier - ультразвуковой увлажнитель воздуха</title>
+    <meta name="description"
+          content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
+    <script async src="/js/common.php"></script>
+    <script async src="/js/call_back.php"></script>
+
+
+    <link rel="stylesheet" href="/css/lp_humidifier_2/default.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/common.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/dexter_menu_lite.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/lp.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/lp2.css">
+
+
+
+
+
+
+
+<!--    <script src="/js/wow.php"></script>
+    <script>new WOW().init();</script>-->
+    <script async src="/js/scroll_only.php"></script>
+    <script async src="/js/lp_humidifier.php"></script>
+</head>
+<body>
 <div class="min_h first_d rel">
     <div class="rel">
         <div class="maxw rel">
@@ -40,113 +73,76 @@
         </div>
     </div><div class="cl"></div>
 </div>
-<!--вторая часть  fotorama.css нужен-->
-<div id="zakazat" class="min_h fon rel">
-    <div class="land_fon_c rel">
+
+<!--вторая часть-->
+<div class="min_h fon rel">
+    <div class="fon_pad rel">
         <div class="maxw rel">
             <section>
-                <div class="land_fon_c_l rel">
-                    <div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="7000" data-keyboard="true" >
-                        <img src="/img/humidifier/dbpic.php?i=humidifier-main" alt="Humidifier - презентация"><img src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара"><img src="/img/humidifier/dbpic.php?i=humidifier-avto" alt="Humidifier - авто"><img src="/img/humidifier/dbpic.php?i=humidifier-fon" alt="Humidifier - фон"><img src="/img/humidifier/dbpic.php?i=humidifier-blue" alt="Humidifier - голубой"><img src="/img/humidifier/dbpic.php?i=humidifier-pink" alt="Humidifier - розовый"><img src="/img/humidifier/dbpic.php?i=humidifier-white" alt="Humidifier - белый"><img src="/img/humidifier/dbpic.php?i=humidifier-home" alt="Humidifier - дом"><img src="/img/humidifier/dbpic.php?i=humidifier-office" alt="Humidifier - офис"><img src="/img/humidifier/dbpic.php?i=humidifier-packaging" alt="Humidifier - офис"><img src="/img/humidifier/dbpic.php?i=humidifier-details" alt="Humidifier - деталировка"><img src="/img/humidifier/dbpic.php?i=humidifier-econom" alt="Humidifier - эконом">
-                    </div>
-                </div>
-                <div class="land_fon_c_r rel">
-                    <h3 class="wow pulse">Humidifier - ультразвуковой увлажнитель воздуха</h3>
-                    <div class="rel"></div>
-                    <div class="land_price wow bounceInRight">416 грн  <span class="land_price_old">629 грн</span></div>
-                    <div>
-                        <div id="land_btn_buy" class="land_btn_buy ac wow bounceInUp">Заказать</div><script>document.getElementById("land_btn_buy").addEventListener("click",function(){location.href="#order-buy";},false);</script>
-                        <p class="wow bounceInRight">Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.</p>
-                        <p>Увлажнитель Humidifier абсолютно безшумный, кабель USB позволяет подключить его в любом удобном для вас месте, а благодаря оригинальной LED подсветке (7 цветов), его можно использовать в комнате как ночник.</p>
-                        <h4>Технические характеристики</h4>
-                        <ul class="item wow bounceInLeft">
-                            <li><span class="check"></span>Обьем резервуара: 300мл;</li>
-                            <li><span class="check"></span>Скорость испарения жидкости: 30 мл.час;</li>
-                            <li><span class="check"></span>Мощность: 1.5-2Вт;</li>
-                            <li><span class="check"></span>Рабочее напряжение: 12V;</li>
-                            <li><span class="check"></span>Размер: 5,7*5,6*16,4см;</li>
-                            <li><span class="check"></span>Материал: АБС пластик, электронные компоненты;</li>
-                            <li><span class="check"></span>Шум: 36 Дб;</li>
-                            <li><span class="check"></span>Вес упаковки: 153 грамма;</li>
-                            <li><span class="check"></span>Цвет: белый, розовый, бирюзовый!</li>
-                        </ul>
-                        <div class="cl"></div>
-                    </div>
-                </div>
+                <h3 class="ac h3lp2">Отличный выбор</h3>
+
+                <p>Увлажнитель воздуха <strong>HUMIDIFIER</strong> – отличный выбор для тех, кто заботится о своём здоровье и здоровье своих близких. Это идеальное решение для создания благоприятного микроклимата в детской комнате, спальне, офисе либо автомобиле.</p><p>Оригинальный дизайн, небольшой размер, бесшумная работа гаджета, приятная подсветка будет дополнять приятную атмосферу в любом помещении.</p>
+
+                <p class="ac"><span class="t_und"><b>В спальне:</b></span> благоприятный сон залог крепкого здоровья</p>
+                <p class="ac"><img class="img_lp2" src="/img/humidifier/dbpic.php?i=humidifier-home" alt="Humidifier - дом"></p>
+
+                <p class="ac"><span class="t_und"><b>Детская комната:</b></span> самое главное, здоровья наших малышей</p>
+                <p class="ac">
+                <img class="img_lp2" src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара">
+                </p>
+
+
+                <p class="ac"><span class="t_und"><b>В офисе:</b></span> создай комфортные условия на рабочем месте</p>
+                <p class="ac">
+                    <img class="img_lp2" src="/img/humidifier2/dbpic.php?i=office" alt="Humidifier - пара">
+                </p>
+
             </section>
         </div><div class="cl"></div>
     </div><div class="cl"></div>
-</div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--третья часть-->
 <div id="preimushestva" class="min_h fon2">
-    <div class="maxw land_benefits">
+    <div class="maxw fon_pad">
         <section>
-            <div class="ac land_benefits_caption">
-                <h3>Наши преимущества</h3>
-                <p>В нашей компании вы получаете не только 100% качественный товар, но и индивидуальный подход к каждому клиенту!</p>
-            </div>
-            <div class="land_benefits_border cl"><br></div>
-            <div class="dwfte">
-                <div class="land_benefits_box five wow rollIn">
-                    <span class="land_pay_i fl"></span>
-                    <span><h4>Способы оплаты</h4><p>При получении на почте или на карту ПриватБанка</p></span>
-                    <div class="cl"></div>
-                </div>
-                <div class="land_benefits_box five wow lightSpeedIn">
-                    <span class="land_quality_i fl"></span>
-                    <span><h4>Гарантия качества</h4><p>Возврат и обмен в течении 14 дней согласно закона</p></span>
-                    <div class="cl"></div>
-                </div>
-            </div>
-            <div class="land_benefits_border cl"></div>
-            <div class="dwfte">
-                <div class="land_benefits_box five wow rollIn">
-                    <span class="land_delivery_i fl"></span>
-                    <span><h4>Быстрая доставка</h4><p>Получите свой заказ в течении 1-2 дней с момента заказа</p></span>
-                    <div class="cl"></div>
-                </div>
-                <div class="land_benefits_box five wow lightSpeedIn">
-                    <span class="land_price_i fl"></span>
-                    <span><h4>Доступные цены</h4><p>Вы можете приобрести кальян MobileSmoke всего за 416 грн</p></span>
-                    <div class="cl"></div>
-                </div>
-            </div>
+            3333333333333
         </section>
     </div>
-    <div class="cl five five_"></div>
 </div>
 <!--четвёртая часть-->
 <div id="to-use" class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
-            <h3 class="ac">Простота использования</h3><br>
-            <ul class="item wow bounceInLeft">
-                <li><span class="check"></span>Перед тем как применять устройство, налить в резервуар чистой воды.</li>
-                <li><span class="check"></span>Подключить увлажнитель к прикуривателю.
-                <li><span class="check"></span>Если растворить в воде пару капель ароматического масла, то в добавок к увлажнению происходит освежение салона. Важно использовать только растворимые в воде масла.</li>
-                <li><span class="check"></span>Струи пара регулируются и направляются в нужную сторону.</li>
-                <li><span class="check"></span>Устройство стоит применять только в заведенном автомобиле.</li>
-                <li><span class="check"></span>Вода должна быть очищенной. Важно следить за тем, чтобы она не заканчивалась.</li>
-                <li><span class="check"></span>При соблюдении этих условий, увлажнитель воздуха повысит качество поездки и приятно освежит воздух в салоне.</li>
-            </ul>
-            <br>
-            <p class="wow bounceInUp">Если вы хотите, чтобы вас всегда сопровождал приятный аромат- то увлажнитель Humidifier для Вас!</p>
+            44444444444
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
 <!--пятая часть-->
 <div id="primenenie" class="min_h fon2">
     <div class="maxw">
-        <h3 class="ac">Оптимальное решение для ВАС</h3><br>
-        <p class="wow bounceInLeft">Сухой воздух – довольно частая проблема для замкнутых помещений, будь то комната или салон автомобиля. Мало того, что им просто неприятно дышать, так он еще и неблаготворно сказывается на вашем здоровье, является причиной целого ряда заболеваний.</p>
-        <p class=" wow bounceInRight">С этим небольшим и недорогим устройством ваши поездки станут намного комфортнее!</p>
-        <ul class="item wow bounceInLeft">
-            <li><span class="check"></span>Сохраняет увлажненность воздуха в салоне автомобиля</li>
-            <li><span class="check"></span>Применяется как аромалампа</li>
-            <li><span class="check"></span>В режиме освежителя снимает психологическое напряжение</li>
-            <li><span class="check"></span>Маленький размер и компактность обеспечивают удобство хранения</li>
-        </ul>
-        <p>Ультразвуковой увлажнитель Humidifier - просто необходим в каждом доме, особенно если в нём есть ребенок, он поможет создать оптимальный микроклимат и обеспечит необходимую влажность в помещении (особенно в отопительный сезон), благодаря чему улучшается сон малыша и взрослых, легко и быстро освежает, увлажняет кожу, создаёт микроклимат в вашем доме, автомобиле или в офисе. Благодаря своим компактным размерам, вы можете брать его с собой на работу, использовать в автомобиле при дальних поездках, как всем известно, духота в автомобиле ведет к потере внимания и апатичности, ведь недостатки систем вентиляции современных автомобилей в том, что они нарушают электрический баланс свежего воздуха, которым они снабжают салон, увлажнитель Humidifier с лёгкостью решит эту проблему.</p>
+        555555555555
     </div>
     <div class="cl five five_"></div>
 </div>
@@ -154,34 +150,11 @@
 <div id="order-buy" class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
-            <div id="land-fast-order" class="five"></div>
-            <section><h2 class="ac wow bounceInDown">Сделать заказать по акции:</h2>
-                <form id="land_form_fast_buy" class="land_form_fast_buy">
-                    <div class="rel">
-                        <input id="formFastFIOLand" name="username" type="text" size="33" title="Введите Ваше имя" placeholder="Фамилия и Имя *" required="">
-                    </div>
-                    <div class="rel">
-                        <input id="formFastTelLand" name="tel" type="text" size="13" title="Введите номер телефона" placeholder="Номер телефона *" required="">
-                    </div>
-                    <div class="rel">
-                        <input id="formFastTownLand" name="town" type="text" size="13" title="Введите Ваш город" placeholder="Город">
-                    </div>
-                    <div class="rel">
-                        <input id="formFastNPostLand" name="n_post" type="number" min="1" title="Введите номер Новой почты" placeholder="Номер отделения новой почты">
-                    </div>
-                    <div class="rel">
-                        <select id="formFastColorLand" class="rel" onchange="this.style.color='black'">
-                            <option value="">Выбрать цвет</option>
-                            <option value="white-Humidifier">Белый</option>
-                            <option value="pink-Humidifier">Розовый</option>
-                            <option value="turquoise-Humidifier">Бирюзовый</option>
-                        </select>
-                    </div>
-                    <div class="rel"><input id="formFastBuySubmitLand" class="wow bounceInUp" type="submit" value="Заказать"></div>
-                </form>
-            </section>
-            </div><div class="cl"></div>
+
+66666666666666666666
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
+
+
 <div id="pulseBtn" class="pulse_btn"><div><div class="pulse_btn_phone"><i class="fa fa-phone" aria-hidden="true"></i><span class="grey"></span></div><div class="pulse_btn_text">Кнопка связи</div></div></div><link rel="stylesheet" href="/css/lp_humidifier/pulse_btn.php"><link href="/css/fotorama.php" rel="stylesheet"><div id="bf"><div id="up"> ^ Наверх</div></div></body></html>
